geodirectory-assets/css/style.scss
/* ... */
dl.geodir-tab-head dd a {
    font-weight: bold;
    height: 48px;
    line-height: 48px;
    padding: 0 11px;
    font-size: 13px;
    display: block;
    font-weight: normal;
    border: 1px solid #e1e1e1;
    border-right: none;
}

dl.geodir-tab-head dd.geodir-tab-active a {
    background: #FFFFFF;
    cursor: default;
    border-bottom: none;
    border-top: 1px #45B8F2 solid;
}

dl.geodir-tab-head dd:last-child {
    border-right: 1px #e1e1e1 solid;
}

ul.geodir-tabs-content {
    margin: 0 0 10px 0;
    padding: 0;
    min-height: 350px;
    border: 1px #e1e1e1 solid;
    border-top: none;
}

.geodir-tabs-content > li {
    clear: left;
}

/* post navigation next/prev */
.geodir-pos_navigation {
    padding: 10px 0;
}

.geodir-post_left {
    float: left;
}

.geodir-post_right {
    float: right;
}

/* details sidebar */
.likethis iframe.facebook {
    width: 90px !important;
}

.twitter-share-button {
    width: 90px !important;
}

.likethis div {
    width: 75px !important;
}

.geodir-company_info {
    border: 1px #ddd solid;
    margin-bottom: 15px;
    padding: 10px;
}

.geodir-company_info p {
    padding: 5px 0 15px 0;
    margin: 5px 0 10px 0;
    border-bottom: 1px #eee solid;
    line-height: 19px;
}

.geodir-common p {
    font-size: 14px;
    line-height: 22px;
}

.geodir-company_info a {
    text-decoration: none;
}

.geodir-company_info i.fa {
    margin-right: 3px;
}

#geodir-post-gallery a {
    margin-right: 6px;
    margin-bottom: 5px;
    display: inline-block;
    text-align: center;
    border: 1px solid #CCCCCC;
}

ul.geodir-tabs-content li {
    padding-top: 10px;
}

ul.geodir-tabs-content li h3 {
    margin: 0px;
}

/* ratings */
.gd_rating_show {
    height: 20px;
    width: 114px;
    overflow: hidden;
    z-index: 1;
    position: relative;
    -webkit-transform: translateZ(0);
    margin: 0 0 8px;
}

.geodir_RatingColor {
    background-color: #F90;
    position: relative;
    top: 0;
    left: 0;
    z-index: 2;
    height: 100%;
    width: 0px;
}

.geodir_RatingAverage {
    background-color: #F90;
    position: relative;
    top: 0;
    left: 0;
    z-index: 2;
    height: 100%;
    top: -20px;
}

.geodir_Star {
    position: relative;
    left: 0;
    z-index: 3;
    width: 114px;
    height: 20px;
    top: -40px;
    background-image: url(../images/stars.png);
    background-position: initial;
    background-repeat: repeat no-repeat;
    font-size: 0;
}

#related_listingTab .geodir_category_list_view li {
    margin-left: 0px;
    margin-right: 0px;
}

/* comments/reviews area */
#comments .comments-title {
    margin: 0;
}

#reviewsTab ol.commentlist li {
    width: auto;
    padding: 0;
    border-bottom: 1px #ccc dashed;
}

#reviewsTab .comments-area ol.commentlist article {
    margin: 15px 0;
}

#reviewsTab .comments-area article header cite, #reviewsTab .comments-area article header time, #reviewsTab .comments-area article header span.item {
    margin: 0 0 0 12%;
    display: block;
}

#reviewsTab .comments-area article header {
    margin-bottom: 15px;
}

#reviewsTab .comments-area .comment-content p span {
    font-size: 14px;
    font-weight: bold;
    margin-bottom: 5px;
    color: #666;
    padding-top: 3px;
}

#reviewsTab .comments-area .comment-content p {
    margin-bottom: 8px;
}

#reviewsTab .commentlist {
    width: 100%;
}

#reviewsTab .comments-area .comment-author {
    float: none;
    max-width: 100%;
}

#reviewsTab .comments-area .comment-content {
    float: none;
    width: 100%;
}

#reviewsTab .comments-area article header {
    margin: 0 0 5px;
    overflow: hidden;
    position: relative;
}

#reviewsTab .comments-area article header img {
    position: relative;
    float: left;
    padding: 0;
    line-height: 0;
    top: 0px;
    left: 0px;
}

#reviewsTab .comments-area article header cite {
    font-style: normal;
    font-size: 15px;
    line-height: 20px;
}

#reviewsTab .comments-area .comment-author cite {
    color: inherit;
    font-style: normal;
    font-weight: normal;
}

#reviewsTab .comments-area .bypostauthor cite span {
    position: absolute;
    margin-left: 5px;
    padding: 2px 5px;
    font-size: 10px;
    color: #fff;
    background-color: #21759b;
    background-image: none;
    border: 1px solid #1f6f93;
    border-radius: 2px;
    box-shadow: none;
    line-height: 14px;
}

#reviewsTab .commentlist .children {
    margin-left: 48px;
}

#reviewsTab .commentlist .children li.comment .fn {
    display: inline;
}

.err-no-rating {
    border: 1px solid red;
    color: #fff;
    display: block;
    font-size: 90%;
    margin: 7px 0 5px 0;
    padding: 5px 7px;
    background-color: red
}

/* ########################################
listings page 
######################################### */
.geodir-tax-sort,
.geodir-list-view-select {
    float: left;
    margin-right: 5px;
}

.geodir_category_list_view {
    padding: 10px 0 10px 0;
    margin: 0px;
}

.geodir_category_list_view li {
    border-bottom: 1px #C8C8C8 dashed;
    padding-bottom: 15px;
    margin-bottom: 15px;
    display: block;
    list-style: none;
}

.geodir_category_list_view li .geodir-post-img {
    position: relative;
    border: 1px #e1e1e1 solid;
    background: #fff;
    padding: 1%;
    display: block;
    width: 26%;
    float: left;
    margin-right: 3%;
}

.geodir_thumbnail {
    image-rendering: optimizequality; /* fix for firefox shaking images bug */
}

.geodir_thumbnail img {
    max-width: 100%;
    width: auto;
    max-height: 125px;
    margin-bottom: 0px;

}

.entry-content .geodir_thumbnail img {
    margin-bottom: 0px;
}

.geodir_new_listing {
    background: url(../images/new.png) no-repeat scroll left top transparent;
    right: 0;
    position: absolute;
    text-indent: -9009px;
    top: 0;
    height: 24px;
    width: 24px;
    margin-top: -5px;
    margin-left: 5px;
}

.geodir_category_list_view li .geodir-content {
    width: 46%;
    float: left;
    margin-right: 3%;
}
/* ... */

